--- a/app/views/admin/clinics/show.html.slim
+++ b/app/views/admin/clinics/show.html.slim
@@ -54,7 +54,7 @@
         dt
           strong Адрес:
         dd
-          = address.city_address
+          =' address.city_address
           = address.street_address
         - if address.state.present?
           dt
