добавлено место работы для доктора

--- a/app/views/admin/doctors/_form.html.slim
+++ b/app/views/admin/doctors/_form.html.slim
@@ -4,16 +4,17 @@
   = f.input :published
   = f.input :pediatric
   = f.input :clinic_id, collection: Clinic.all.map{|u| [u.full_name, u.id]}
+  = f.input :employer, input_html: {class: 'span5'}
   = f.input :gender, collection: Doctor::GENDER, item_wrapper_class: 'inline', as: :radio_buttons
-  = f.input :description, as: :text
-  = f.input :specialty
+  = f.input :description, as: :text, input_html: {class: 'span5'}
+  = f.input :specialty, input_html: {class: 'span5'}
   = f.input :user_id, collection: User.all.map{|u| [u.full_name, u.id]}
   = f.input :rating
-  = f.input :education
+  = f.input :education, input_html: {class: 'span5'}
   = f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @doctor.high_school_finished}
   = f.input :high_school_name
   = f.input :high_school_finished, as: :string, input_html: {class: 'datepicker', value: @doctor.starting_work}
-  = f.input :awards, as: :text
+  = f.input :awards, input_html: {class: 'span5'}
   = f.input :visit_home
   = f.input :price
   = f.input :advise_id, as: :hidden
