--- a/app/views/admin/clinics/_form.html.slim
+++ b/app/views/admin/clinics/_form.html.slim
@@ -1,12 +1,12 @@
 = simple_nested_form_for [:admin, @clinic], :html => {:class => 'form-horizontal'} do |f|
   = f.input :full_name
   = f.input :published
-  = f.input :description, as: :text
-  = f.input :specialty
+  = f.input :description, as: :text, input_html: {class: 'span5'}
+  = f.input :specialty, input_html: {class: 'span5'}
   = f.input :user_id, collection: User.all.map{|u| [u.full_name, u.id]}
   = f.input :rating
   = f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @clinic.starting_work}
-  = f.input :awards, as: :text
+  = f.input :awards, input_html: {class: 'span5'}
   = f.input :visit_home
   = f.input :pediatric
   = f.input :price
