--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -4,7 +4,8 @@
       span.icon-bar
       span.icon-bar
       span.icon-bar
-    = link_to 'Консультант', root_path, class: 'brand'
+    /= link_to 'Консультант', root_path, class: 'brand'
+    =link_to image_tag('logo.png'), root_path, class: 'brand'
     .container.nav-collapse
       ul.nav.pull-right
         - if user_signed_in?
