--- a/app/views/layouts/admin_layout.html.slim
+++ b/app/views/layouts/admin_layout.html.slim
@@ -4,7 +4,7 @@ html lang="ru"
     meta charset="utf-8" /
     meta content="IE=Edge,chrome=1" http-equiv="X-UA-Compatible" /
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
-    title= content_for?(:title) ? yield(:title) : "Adviser"
+    title= content_for?(:title) ? yield(:title) : "Консультант, администрированый раздел"
     = csrf_meta_tags
     /! Le HTML5 shim, for IE6-8 support of HTML elements
     /![if lt IE 9]
