--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -6,5 +6,6 @@
       = comment.user.try(:first_name)
     .span2
       = rating_box(comment.rating)
-    .span6
+  .row-fluid
+    .span10
       = comment.message
