--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for [commentable, @comment], :html => {:class => 'form-horizontal'} do |f|
+= simple_form_for [commentable, @comment], :html => {:class => 'form-inline'} do |f|
   .control-group.string.optional
     label.string.optional.control-label Ваша оценка:
     .controls
