--- a/app/views/doctors/show.html.slim
+++ b/app/views/doctors/show.html.slim
@@ -151,7 +151,7 @@
   == render @comments
 nav.pagination
   = paginate @comments
-#new_comment_window.modal.hide.fade aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" 
+#new_comment_window.modal.hide.fade aria-hidden="true" role="dialog" tabindex="-1"
   .modal-header
     button.close aria-hidden="true" data-dismiss="modal" type="button"  ×
     h4#myModalLabel Оставьте пожалуйста свой комментарий
