--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,11 @@
 doctype html
-html lang="ru" 
+html lang="ru"
   head
     meta charset="utf-8" /
     meta content="IE=Edge,chrome=1" http-equiv="X-UA-Compatible" /
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
+    meta name="description" content="сайт для поиска лучших докторов, рекомендации лучших специалистов и клиник" /
+    meta name="Keywords" content="болезни, лечение, советы доктора, рекомендации, посоветуйте доктора, посоветйте врача, отзывы о докторе, отзывы о больнице, рекомендация, рекомендуйте доктора" /
     title= content_for?(:title) ? yield(:title) : "Consultor - Ваш консультант"
     = csrf_meta_tags
     /! Le HTML5 shim, for IE6-8 support of HTML elements
