--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html lang="ru"
     meta content="IE=Edge,chrome=1" http-equiv="X-UA-Compatible" /
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
     meta name="description" content="сайт для поиска лучших докторов, рекомендации лучших специалистов и клиник" /
-    meta name="Keywords" content="болезни, лечение, советы доктора, рекомендации, посоветуйте доктора, посоветйте врача, отзывы о докторе, отзывы о больнице, рекомендация, рекомендуйте доктора, в Днепропетровске, в Киеве, в Харькове, в Украине" /
+    meta name="Keywords" content="болезни, лечение, советы доктора, рекомендации, отзывы, посоветуйте доктора, посоветйте врача, отзывы о докторе, отзывы о больнице, отзывы о клинике, рекомендация, порекомендуйте доктора, в Днепропетровске, в Киеве, в Харькове, в Украине" /
     title= content_for?(:title) ? yield(:title) : "Consultor - Ваш консультант"
     = csrf_meta_tags
     /! Le HTML5 shim, for IE6-8 support of HTML elements
