тоолтип и ссылка на регистрацию при нажатии на лайк

--- a/app/views/layouts/_auth_links.html.slim
+++ b/app/views/layouts/_auth_links.html.slim
@@ -6,7 +6,7 @@
       li
         = link_to image_tag('icons/google-plus.png', alt: 'Google'), omniauth_authorize_path('user', 'google_oauth2'), :"data-original-title" => 'Google', rel: 'tooltip'
       li
-        = link_to image_tag('icons/facebook.png', alt: 'Facebook', title: 'Facebook'), omniauth_authorize_path('user', 'facebook'), :"data-original-title" => 'Facebook', rel: 'tooltip'
+        = link_to image_tag('icons/facebook.png', alt: 'Facebook'), omniauth_authorize_path('user', 'facebook'), :"data-original-title" => 'Facebook', rel: 'tooltip'
       li
         = link_to image_tag('icons/twitter.png', alt: 'Twitter'), omniauth_authorize_path('user', 'twitter'), :"data-original-title" => 'Twitter', rel: 'tooltip'
       li
