--- a/app/views/Advises/_form.html.slim
+++ b/app/views/Advises/_form.html.slim
@@ -1,16 +1,17 @@
 = simple_form_for @advise, :html => {:class => 'form-horizontal'} do |f|
-  = f.input :category_id, collection: Category.sorted
-  = f.input :last_name
-  = f.input :name
-  = f.input :full_name
-  = f.input :specialty
-  = f.input :city
-  = f.input :phone_number
-  = f.input :pediatric
-  = f.input :description
-  = f.input :idoctor
-  = f.input :iclinic
-  .form-actions
-    = f.button :submit, 'Рекомендовать', :class => 'btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), \
-      root_url, :class => 'btn'
+  h3 Рекомендовать #{f.input :choice, collection: ['доктора', 'клинику'], as: :radio_buttons, item_wrapper_class: 'inline', label: false}
+  #advise-form style='display: none'
+    = f.input :category_id, collection: Category.sorted
+    = f.input :last_name, required: true, input_html: {class: 'span5'}
+    = f.input :name, required: true, input_html: {class: 'span5'}
+    = f.input :full_name, required: true, input_html: {class: 'span5'}
+    = f.input :specialty, input_html: {class: 'span5'}
+    = f.input :city, input_html: {class: 'span5'}
+    = f.input :phone_number, input_html: {class: 'span5'}
+    = f.input :pediatric
+    = f.input :description, input_html: {class: 'span5'}
+    = f.input :idoctor
+    = f.input :iclinic
+    .form-actions
+      = f.button :submit, 'Рекомендовать', :class => 'btn-primary'
+      = link_to t('.cancel', :default => t("helpers.links.cancel")), root_url, :class => 'btn'
