--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -1,8 +1,8 @@
 h2 Регистрация
 = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :class => 'form-horizontal' }) do |f|
-  = f.error_notification
   .form-inputs
-    = f.input :email, :required => true, :autofocus => true
+    = f.input :first_name, :required => true, :autofocus => true
+    = f.input :email, :required => true
     = f.input :password, :required => true
     = f.input :password_confirmation, :required => true
   .form-actions
