--- a/app/views/users/mailer/reset_password_instructions.html.slim
+++ b/app/views/users/mailer/reset_password_instructions.html.slim
@@ -1,6 +1,6 @@
 p
-  | Hello #{@resource.email}!
-p Someone has requested a link to change your password. You can do this through the link below.
-p= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token)
-p If you didn't request this, please ignore this email.
-p Your password won't change until you access the link above and create a new one.
+  | Здравствуйте,  #{@resource.email}!
+p Вы запросили изменение пароля для http://consultor.com.ua. Перейдите по ссылке для смены пароля:
+p= link_to 'Изменить мой пароль', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token)
+p Если Вы не запрашивали изменение пароля, просто изнорируйте это письмо.
+p Ваш пароль не будет изменен до тех пор, пока Вы не перейдете по ссылке и не создадите новый пароль.
