--- a/app/views/users/shared/_links.slim
+++ b/app/views/users/shared/_links.slim
@@ -1,7 +1,7 @@
 - if controller_name != 'sessions'
   = link_to "Войти", new_session_path(resource_name), class: 'btn btn-primary'
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "Зарегистрироваться", new_registration_path(resource_name), class: 'btn btn-primary'
+  = link_to "Зарегистрироваться", new_registration_path(resource_name), class: 'btn btn-primary offset1'
 - if devise_mapping.recoverable? && controller_name != 'passwords'
   = link_to "Забыли пароль?", new_password_path(resource_name), class: 'btn'
   br
