--- a/app/views/layouts/_admin_navbar.html.slim
+++ b/app/views/layouts/_admin_navbar.html.slim
@@ -6,6 +6,7 @@
       span.icon-bar
     .container.nav-collapse
       ul.nav
+        li= link_to "Аналитика", admin_path
         li= link_to "Доктора", admin_doctors_path
         li= link_to "Клиники", admin_clinics_path
         li= link_to "Юзеры", admin_users_path
