--- a/app/views/clinics/_form.html.slim
+++ b/app/views/clinics/_form.html.slim
@@ -27,5 +27,4 @@
           = f.link_to_add "Добавить фото", :photos
   .form-actions
     = f.button :submit, :class => 'btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), \
-      root_path, :class => 'btn'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), user_path, :class => 'btn'
