--- a/app/views/users/mailer/reset_password_instructions.html.slim
+++ b/app/views/users/mailer/reset_password_instructions.html.slim
@@ -1,6 +1,6 @@
 p
   | Здравствуйте,  #{@resource.email}!
 p Вы запросили изменение пароля для http://consultor.com.ua. Перейдите по ссылке для смены пароля:
-p= link_to 'Изменить мой пароль', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token)
+p= link_to 'Изменить мой пароль', edit_password_url(@resource, reset_password_token: @token)
 p Если Вы не запрашивали изменение пароля, просто изнорируйте это письмо.
 p Ваш пароль не будет изменен до тех пор, пока Вы не перейдете по ссылке и не создадите новый пароль.
