--- a/app/views/admin/doctors/_form.html.slim
+++ b/app/views/admin/doctors/_form.html.slim
@@ -1,18 +1,18 @@
 = simple_nested_form_for [:admin, @doctor], :html => {:class => 'form-horizontal'} do |f|
-  = f.input :last_name
-  = f.input :first_name
+  = f.input :last_name, input_html: {class: 'span5'}
+  = f.input :first_name, input_html: {class: 'span5'}
   = f.input :published
   = f.input :pediatric
   = f.input :clinic_id, collection: Clinic.all.map{|u| [u.full_name, u.id]}
   = f.input :employer, input_html: {class: 'span5'}
   = f.input :gender, collection: Doctor::GENDER, item_wrapper_class: 'inline', as: :radio_buttons
-  = f.input :description, as: :text, input_html: {class: 'span5'}
+  = f.input :description, as: :text, input_html: {rows: 7, class: 'span6'}
   = f.input :specialty, input_html: {class: 'span5'}
   = f.input :user_id, collection: User.all.map{|u| [u.full_name, u.id]}
   = f.input :rating
   = f.input :education, input_html: {class: 'span5'}
   = f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @doctor.high_school_finished}
-  = f.input :high_school_name
+  = f.input :high_school_name, input_html: {class: 'span5'}
   = f.input :high_school_finished, as: :string, input_html: {class: 'datepicker', value: @doctor.starting_work}
   = f.input :awards, input_html: {class: 'span5'}
   = f.input :visit_home
