--- a/app/views/clinics/_form.html.slim
+++ b/app/views/clinics/_form.html.slim
@@ -1,11 +1,11 @@
 = simple_nested_form_for @clinic, :html => {:class => 'form-horizontal'} do |f|
-  = f.input :full_name
+  = f.input :full_name, input_html: {class: 'span5'}
   = f.input :specialty, input_html: {class: 'span5'}
   = f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @clinic.starting_work}
   = f.input :awards, input_html: {class: 'span5'}
   = f.input :price
   = f.input :pediatric
-  = f.input :description, as: :text, input_html: {class: 'span5'}
+  = f.input :description, as: :text, input_html: {rows: 7, class: 'span6'}
   h4 Категории
   table.table.table-striped
     = f.fields_for :clinic_category_relations, wrapper: false
