--- a/app/views/admin/doctors/show.html.slim
+++ b/app/views/admin/doctors/show.html.slim
@@ -126,6 +126,12 @@
               |:
           dd
             = mail_to(address.email)
+          dt
+            strong
+              = model_class.human_attribute_name(:end_promo)
+              |:
+          dd
+            = @doctor.end_promo
 
   .span2.pull-right
     = image_tag @doctor.photourl
