--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -4,7 +4,7 @@ footer
       .span3
         ul.nav.nav-pills
           li
-            a.nav.nav-pills href="#" © 2013 · Украина
+            a.nav.nav-pills href="#" © 2013 - 2014 · Украина
       .span6
         ul.nav.nav-pills
           li
