--- a/app/views/users/shared/_rules.html.slim
+++ b/app/views/users/shared/_rules.html.slim
@@ -112,7 +112,7 @@ ol
   li
     | Если модератор, прочитав сообщение, считает, что оно нарушает правила ресурса, он имеет право удалить его.
   li
-    | Каждый пользователь так же может пожаловаться на комментарий. При наборе определенного количества жалоб, комментарий
+    | Каждый пользователь так же может пожаловаться на отзыв. При наборе определенного количества жалоб, отзыв
     | будет скрыт для дальнейшего пересмотра модератором.
   li
     | Если вы не согласны с решением модератора, вы можете написать в службу технической поддержки, указанной в контактах
