--- a/app/views/admin/clinics/_form.html.slim
+++ b/app/views/admin/clinics/_form.html.slim
@@ -2,7 +2,7 @@
   = f.input :full_name, input_html: {class: 'span5'}
   = f.input :published
   = f.input :description, as: :text, input_html: {rows: 7, class: 'span6'}
-  = f.input :specialty, input_html: {class: 'span5'}
+  = f.input :specialty, input_html: {class: 'span5'}, placeholder: 'Косметология, хирургия и т.д.'
   = f.input :user_id, collection: User.all.map{|u| [u.full_name, u.id]}
   = f.input :rating
   = f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @clinic.starting_work}
@@ -16,13 +16,13 @@
   table.table.table-striped
     = f.fields_for :clinic_category_relations, wrapper: false
     tr
-      td colspan="3" 
+      td colspan="3"
         = f.link_to_add "Добавить категорию", :clinic_category_relations
   h4 Адреса (обязательное поле)
   table.table.table-striped
     = f.fields_for :addresses, wrapper: false
     tr
-      td colspan="3" 
+      td colspan="3"
         = f.link_to_add "Добавить адрес", :addresses
   h4 Фотографии
   table.table.table-striped
