--- a/app/views/application/_items.html.slim
+++ b/app/views/application/_items.html.slim
@@ -1,21 +1,21 @@
-/- cache [@cache_key] do
-.row-fluid
-  - @items.each_slice(4) do |slice|
-    .item.row-fluid
-      ul.thumbnails
-        - slice.each do |item|
-          li.span3 class=item.promo_class
-            = link_to image_tag(item.photourl), polymorphic_path(item) rescue nil
-            table.table.table-condensed
-              tr
-                td= rating_box(item.rating)
-              tr
-                td
-                  span id=item.id
-                    == render partial: 'likes/like_block', locals: {likeable: item}
-              tr
-                td= link_to item.full_name, polymorphic_path(item)
-              tr
-                td= item.categories.first.name
-              tr
-                td= item.addresses.first.city
+- cache [@cache_key] do
+  .row-fluid
+    - @items.each_slice(4) do |slice|
+      .item.row-fluid
+        ul.thumbnails
+          - slice.each do |item|
+            li.span3 class=item.promo_class
+              = link_to image_tag(item.photourl, alt: item.specialty + ' ' + item.full_name), polymorphic_path(item) rescue nil
+              table.table.table-condensed
+                tr
+                  td= rating_box(item.rating)
+                tr
+                  td
+                    span id=item.id
+                      == render partial: 'likes/like_block', locals: {likeable: item}
+                tr
+                  td= link_to 'Отзывы о ' + item.full_name, polymorphic_path(item)
+                tr
+                  td= link_to(item.categories.first.name, item.categories.first)
+                tr
+                  td= item.addresses.first.city
